# transformers

./: .gitattributes  .gitignore  README.md  REAME.md  plots.ipynb  pyproject.toml  transformers.drawio
benchmark/: fama_french.ipynb  fama_french_benchmark.ipynb  fama_french_benchmark.py  ft_hpt.py  ft_transformer_benchmark.py  mlp_benchmark.ipynb  mlp_benchmark.py  tree_benchmark.ipynb  tree_benchmark.py
csv-data/: company_data_info.csv  copany data.csv
data-notebooks/: country_analysis.ipynb  data_processing.ipynb  data_processing.py  data_summary.ipynb  data_summary_validation.ipynb
drawio/: EncoderAttention.drawio  dualpath-transformer.drawio  embedding.drawio  single_multi_attention.drawio  transformers.drawio
hyperparameters-tuning/: embeding_varients.py  ft_transformer.py
jsons/: column_metadata.json  train_columns.json
notebooks/: ..\data\k0_columns.json  ..\data\k1_columns.json  csv_to_parquet.ipynb  data_processing.ipynb  ft_transformer.ipynb  non_linear_transformer.ipynb  nonlinear_transformer.ipynb  nonlinear_transformer_expanding.ipynb  nonlinear_transformer_rolling.ipynb
slurm/: slurm_ft_transformer.sh  slurm_rolling.sh  slurm_split.sh
slurm-scripts/: slurm_expanding.sh  slurm_rolling.sh  slurm_static.sh
src/: dual_path_pipeline.py  eval_dual_path.py  ft_transformer_benchmark.py  hpt_dual_path.py  nonlinear_dualapproach.py  nonlinear_transformer.py  nonlinear_transformer_expanding.py  nonlinear_transformer_rolling.py
tikz-figures/: attention.tex  multi-attention.tex  single-multi-head-attention.tex  softmax.tex
(+113 files in other folders)
